# slot-book-agent-main

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/: graph.py
database/: crud.py  database.py  models.py
model/: model.py
prompt/: prompt.py
tool/: book_slot.py  check_availability.py
