[project]
name = "slot-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-redis>=0.5.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "redis>=7.4.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
